fixed activities alignment and image sizes

--- a/src/container/Gallery/Gallery.scss
+++ b/src/container/Gallery/Gallery.scss
@@ -80,7 +80,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 25rem;
+  height: 26rem;
 
   @media screen and (min-width: 768px) {
     height: 35rem;
@@ -89,16 +89,15 @@
   @media screen and (min-width: 1024px) {
     width: 50%;
     margin-right: 5rem;
-    height: 25rem;
+    height: 28rem;
   }
 
   @media screen and (min-width: 1280px) {
-    height: 35rem;
+    height: 37rem;
   }
 
   .slide {
     border-radius: 0.5rem;
-    box-shadow: 0px 0px 7px #666;
     width: 100%;
     height: 100%;
   }
