--- a/src/container/OurPrograms/OurPrograms.scss
+++ b/src/container/OurPrograms/OurPrograms.scss
@@ -58,20 +58,20 @@
 
       img {
         max-width: 100%;
-        height: 190px;
+        height: 150px;
         border-radius: 15px;
         object-fit: cover;
 
         @media screen and (min-width: 768px) {
-          height: 150px;
+          height: 110px;
         }
 
         @media screen and (min-width: 1024px) {
-          height: 120px;
+          height: 100px;
         }
 
         @media screen and (min-width: 1280px) {
-          height: 140px;
+          height: 120px;
         }
       }
 
@@ -87,6 +87,12 @@
         @media screen and (min-width: 1024px) {
           width: 100%;
         }
+      }
+    }
+
+    .app__activities-item:nth-last-child(1) {
+      @media screen and (min-width: 768px) and (max-width: 1023px) {
+        margin-left: 10rem;
       }
     }
   }
