--- a/src/container/Testimonial/Testimonial.scss
+++ b/src/container/Testimonial/Testimonial.scss
@@ -1,27 +1,91 @@
 .app__testimonials {
+  display: flex;
   width: 100%;
   height: 100%;
-  margin-top: 2rem;
-  padding-right: 1rem;
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+  margin-top: 6rem;
+  margin-bottom: 13rem;
+  background-color: #fafafb;
 
   @media screen and (min-width: 768px) and (max-width: 1023px) {
-    padding-left: 3rem;
+    padding-left: 5rem;
+    padding-right: 7rem;
+    margin-bottom: 10rem;
   }
 
   @media screen and (min-width: 1024px) {
-    margin-top: 4rem;
-    padding-left: 3rem;
+    margin-top: 2rem;
+    margin-bottom: 14rem;
+    padding-left: 8rem;
+    padding-right: 8rem;
   }
 
   .app__testimonials_container {
-    display: flex;
-    width: max-content;
-    overflow-x: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    padding-left: 1rem;
+    position: relative;
+    width: 100%;
+
+    @media screen and (min-width: 1024px) {
+      width: 80%;
+    }
+
+    .app__testimonials_card {
+      align-items: center;
+      flex: 1;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+
+      opacity: 0;
+      pointer-events: none;
+      transform: scale(.8);
+      transition: 0.5s ease-in-out;
+    
+      @media screen and (min-width: 768px) {
+        margin-right: 1.4rem;
+      }
+    
+      @media screen and (min-width: 820px) {
+        margin-right: 2rem;
+      }
+    
+      @media screen and (min-width: 1024px) {
+        padding: 4rem;
+        min-width: 23rem;
+      }
+    
+      @media screen and (min-width: 1280px) {
+        min-width: 27rem;
+      }
+    
+      .testimonial-feedback {
+        font-size: 17px;
+        margin-left: 1rem;
+        font-style: italic;
+      }
+    
+      .testimonial-name {
+        margin-top: 0.8rem;
+        text-align: right;
+        font-style: italic;
+        font-weight: bold;
+
+        @media screen and (min-width: 768px) {
+          margin-top: 0.5rem;
+        }
+    
+        @media screen and (min-width: 1024px) {
+          margin-top: 0.8rem;
+        }
+      }
+    }
+
+    .app__testimonials_card-active {
+      opacity: 1;
+      transform: scale(1);
+      pointer-events: visible;
+    }
+
   }
 
   .app__testimonials_container::-webkit-scrollbar {
@@ -29,43 +93,4 @@
   }
 }
 
-.app__testimonials_card {
-  min-width: 18rem;
-  margin-right: 0.9rem;
-  border-radius: 15px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  padding: 0.8rem;
 
-  @media screen and (min-width: 768px) {
-    margin-right: 1.4rem;
-  }
-
-  @media screen and (min-width: 820px) {
-    margin-right: 2rem;
-  }
-
-  @media screen and (min-width: 1024px) {
-    min-width: 23rem;
-  }
-
-  @media screen and (min-width: 1280px) {
-    min-width: 27rem;
-  }
-
-  .testimonial-feedback {
-    font-size: 17px;
-    margin-left: 1rem;
-    font-style: italic;
-  }
-
-  .testimonial-name {
-    margin-top: 1.5rem;
-    text-align: right;
-    font-style: italic;
-    font-weight: bold;
-
-    @media screen and (min-width: 1024px) {
-      margin-top: 2rem;
-    }
-  }
-}
